grid is fixed, but still needs to reduce spacing between columns

--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,8 +1,8 @@
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-template-rows: minmax(150px, auto);
-  grid-gap: 25px 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: 200px;
+  grid-gap: 25px 15px;
   justify-items: center;
 }
 
