--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -2,7 +2,8 @@ input[type="text"] {
   margin: auto;
   height: 2.4em;
   width: 60%;
+  text-indent: 10px;
   &::placeholder {
-    padding-left: 1.5%;
+    text-indent: 10px;
   }
 }
